# Clarity-Log-Parsing-CLI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __main__.py  main.py
src/cli/: __init__.py  commands.py
src/parser/: parser.py
src/processing/: batch_processor.py  stream_processor.py
src/tui/: __init__.py  app.py  styles.py
src/tui/screens/: __init__.py  results_screen.py  stream_screen.py
src/utils/: utils.py
tests/: test_parser.py  test_stream_processor.py  test_utils.py
